--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Message Board Homepage</h1>
-<ul>
-    {% for post in all_posts_list %}
-        <li>{{ post.text }}</li>
+    {% for post in object_list %}
+        <div class="post-entry">
+            <h2><a href="{% url 'post-detail' post.pk %}">{{ post.title }}</a></h2>
+            <p>{{ post.body }}</p>
+        </div>
     {% endfor %}
-</ul>
 {% endblock %}
